# spirit

./: .gitignore  .gitignore_global  CMakeCache.txt  CMakeLists.txt  README.md  bug_report.txt.c
applications/: CMakeLists.txt
applications/gamepad/: CMakeLists.txt  main.cpp
applications/ninja_gui/: CMakeLists.txt  main.cpp
applications/samples/: CMakeLists.txt  main.cpp
applications/temp/: main.cpp
bikeSimMATLAB/: bikeModel.m  buildBike.m  rk4Solver.m  trajectoryUpdate.m
config_files/: PangolinGuiParams.cfg
examples/: CMakeLists.txt
examples/CarCalib/: CMakeLists.txt  main.cpp
examples/build-rk4_3D_car-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  rk4_3D_car  rk4_3D_car.cbp
examples/build-rk4_bike_localplanner-Desktop-Default/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake  rk4_bike_localplanner  rk4_bike_localplanner.cbp
examples/bvp_example/: CMakeLists.txt  main.cpp
examples/car_robot/: CMakeLists.txt  main.cpp
examples/clf_drive/: CMakeLists.txt  clf.h  main.cpp
examples/clf_drive_8/: clf.h  main.cpp
examples/clf_drive_ellipse/: clf.h  main.cpp  main.cpp__
examples/clf_drive_obs/: clf.h  main.cpp
examples/clf_drive_straight/: clf.h  main.cpp
examples/clf_drive_straight_PF/: clf.h  main.cpp
examples/clf_drive_tr-tr/: clf.h  main.cpp
examples/cost_surf/: CMakeLists.txt  main.cpp
examples/der_test/: main.cpp
examples/gamepad_drive/: CMakeLists.txt  main.cpp
examples/mpc_car/: CMakeLists.txt  main.cpp  main.cpp.nn2348
examples/newrk4test/: CMakeLists.txt  main.cpp
examples/ninja_gui/: main.cpp
examples/ode_car_mpc/: CMakeLists.txt  main.cpp
examples/rk4/: CMakeLists.txt  main.cpp
examples/rk4_3D_car/: CMakeLists.txt  main.cpp
examples/rk4_3D_car/main/: CMakeLists.txt
examples/rk4_bike_localplanner/: CMakeLists.txt  main.cpp
examples/rk4_bike_mpc/: main.cpp
examples/rk4_bike_mpc_circle/: main.cpp
examples/rk4_car/: CMakeLists.txt  CarODE.h  CarODE__.h  main.cpp  tmp.cpp  tmp.txt
examples/rk4_spirit_car/: main.cpp
examples/shooting/: main.cpp
examples/shooting_box_avoidance/: CMakeLists.txt  RecvNode.h  main.cpp
examples/sim_car/: CMakeLists.txt  main.cpp  main.cpp.backup  main_8.cpp  main_circle.cpp  main_ellipse.cpp  main_obstacle.cpp  main_straight.cpp
examples/sim_car/temp_files/: sim_input_8.txt  sim_input_circle.txt  sim_input_ellipse.txt  sim_input_obs.txt  sim_input_straight.txt
examples/state_logger/: AnalyticalCalibCostFunc.h  CMakeLists.txt  LogParser.h  calibrate_model.cpp  main.cpp  sample_traj.cpp  state_logger.cpp  test_parameter.cpp
include/spirit/: BikeODE.h  BikeParameters.h  BikeSimFunctorRK4.h  CMakeCache.txt  CalibDerCarODE.h  CarFunc.h  CarODE.backup1  CarODE.h  CarSimFunctor.h  CarSimFunctorRK4.h  Common.h  GeneralTools.h  Gui.h  LocalPlannerLossFunc.h  LogBarrierLossFunc.h  MPCCostFunc.h  MPCLossFunc.h  MeshBikeSimFunctorRK4.h  ODEInterface.h  Objects.h  ParamLimitLossFunc.h  Physics.h  RK4.h  Settings.h  ShootingCarSimFunctor.h  VehicleCeresCostFunc.h  World.h  spGeneralTools.h  spMeshFunctions.h  spMeshVisitor.h  spSettings.h  spSimCommonFunctor.h  spirit.h
include/spirit/Calibration/: CalibCarSimFunctor.h  CalibCostFunc.h  CandidateWindow.h  EntropyTable.h  PriorityQueue.h
include/spirit/Controllers/: CircleMan.h  MPCCostFunc.h  MPCManRegCostFunc.h  Maneuver.h  spControllerInterface.h  spMPC.h  spPID.h
include/spirit/Gui/: spCommonGui.h  spOpenSceneGraphGui.h  spPangolinScenegraphGui.h  spopenscenegraphgui.h
include/spirit/Objects/: spAWSDCar.h  spBezierCurve.h  spBike.h  spBox.h  spCar.h  spCommonObject.h  spInfoVisitor.h  spLine.h  spLineStrip.h  spMesh.h  spVehicle.h  spWaypoint.h  spWheel.h
include/spirit/Physics/: spBulletPhysicsCommon.h  spBulletRigidBody.h  spBulletWorld.h  spCommonPhysics.h  spPhysicsRigidBody.h  spPhysicsWorld.h
include/spirit/Planners/: VehicleCeresCostFunc.h  spBezierPlanner.h  spCirclePlanner.h  spGlobalPlannerInterface.h  spLocalPlanner.h  spLocalPlannerInterface.h  spTrajectory.h
include/spirit/Types/: ctpl_stl.h  spCurve.h_  spTypes.h
include/spirit/objects/: CommonObj.h  GLCar.h  SpiritAxes.h  SpiritCars.h  SpiritStaticTerrain.h  SpiritWaypoints.h
logs/: circle_1round_init-2-1.5.csv  circle_1round_init00.csv  circle_2disturbances.csv  circle_5round_nodist.csv  circle_disturbance2.csv  circle_grabbed.csv  circle_tt_5rounds.csv  circle_tt_disturbance.csv  circle_tt_grabbed.csv  circle_tt_init-2-1.csv  circle_tt_init0+1o5.csv  circle_tt_init0-0.csv  ellipse_00.csv  ellipse_5rounds.csv  ellipse_disturbance.csv  ellipse_init2.csv  obs1.csv  obs10.csv  obs11.csv  obs12.csv  obs13.csv  obs14.csv  obs15.csv  obs16.csv  obs17.csv  obs18.csv  obs19.csv  obs2.csv  obs20.csv  obs21.csv  obs22.csv  obs23.csv  obs24.csv  obs25.csv  obs26.csv  obs27.csv  obs28.csv  obs29.csv  obs3.csv  obs30.csv  (+9 more)
meshes/: Vq.txt  herbie.ply  lab_v2.ply  wheel.ply
parameter_files/: gui_params.csv
src/: GeneralTools.cpp  Gui.cpp  Objects.cpp  Physics.cpp  RK4.cpp  Settings.cpp  SpiritAxes.cpp  SpiritCars.cpp  SpiritStaticTerrain.cpp  SpiritWaypoints.cpp  World.cpp  spAWSDCar.cpp  spBezierCurve.cpp  spBezierPlanner.cpp  spBike.cpp  spBox.cpp  spBox.cpp.autosave  spBulletWorld.cpp  spCar.cpp  spCirclePlanner.cpp  spCommonObject.cpp  spCurve.cpp_  spGeneralTools.cpp  spInfoVisitor.cpp  spLine.cpp  spLineStrip.cpp  spLocalPlanner.cpp  spMPC.cpp  spMesh.cpp  spMeshFunctions.cpp  spMeshVisitor.cpp  spOpenSceneGraphGui.cpp  spPID.cpp  spPangolinScenegraphGui.cpp  spSettings.cpp  spSphere.cpp  spTrajectory.cpp  spVehicle.cpp  spWaypoint.cpp  spWheel.cpp  (+3 more)
