find_package( spirit QUIET )
if( spirit_FOUND )
	#add_subdirectory( car_robot )
	#add_subdirectory( CarCalib )
	#add_subdirectory( mpc_car )
	add_subdirectory( sim_car )
	#add_subdirectory( bvp_example )
	#add_subdirectory( gamepad_drive )
      add_subdirectory( clf_drive )
      add_subdirectory( clf_drive_obs )
      add_subdirectory( clf_drive_straight )
endif()

