find_package( spirit QUIET )
if( spirit_FOUND )
	#add_subdirectory( car_robot )
	#add_subdirectory( CarCalib )
	#add_subdirectory( mpc_car )
	#add_subdirectory( sim_car )
	#add_subdirectory( shooting )
	#add_subdirectory( bvp_example )
			#add_subdirectory( gamepad_drive )
			#add_subdirectory( rk4 )
			#add_subdirectory( rk4_car )
			#add_subdirectory( ode_car_mpc )
			#add_subdirectory( rk4_spirit_car )
			#add_subdirectory( cost_surf )
			add_subdirectory( rk4_3D_car )
			add_subdirectory( rk4_bike_localplanner )
			add_subdirectory( rk4_bike_mpc )
endif()
